--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,12 @@
 div.footer {
-  display: flex;
-  flex-direction: row;
-  height: 8vh;
+  display: grid;
+  grid-template-columns: 100%;
+  height: 20vh;
   width: 100%;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  bottom: 0;
   color: grey;
   background-color: #000;
   margin-top: 10px;
+  text-align: center;
 }
 
 div.contact {
@@ -24,7 +21,7 @@ div.contact {
   background-color: rgb(71, 177, 209);
 }
 
-input[type=text] {
+input[type="text"] {
   width: 75vw;
   margin: 8px 0;
 }
@@ -35,7 +32,7 @@ textarea {
   height: 150px;
 }
 
-div.banner{
+div.banner {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -50,21 +47,48 @@ img.banner {
   margin: 10px;
   height: 200px;
   width: 200px;
-  background-color: blue;;
+  background-color: grey;
 }
 
 .messenger {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  width: 100%;
+  bottom: 0vh;
+  position: sticky;
   justify-content: flex-end;
   width: 100%;
 }
 
-svg.svg-inline--fa{
+svg.svg-inline--fa.fa-facebook-messenger {
   display: flex;
   color: blue;
   margin: 10px;
-  position: sticky;
-  bottom: 1;
-  width: 100%;
+}
+
+svg.svg-inline--fa {
+  color: blue;
+  margin: 10px;
+}
+
+div.social {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: space-evenly;
+  align-items: center;
+  width: 100vw;
+}
+
+p.mail {
+  text-align: center;
+}
+
+a {
+  color: grey;
+  text-decoration: none;
+}
+
+a:hover {
+  color: blue;
 }
