--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ a:hover {
   justify-content: center;
   margin-top: 30px;
 }
-
+/******  the slideshow  ******/
 div.each-slide {
   height: auto;
   margin: 5px auto;
@@ -119,7 +119,7 @@ div.each-slide {
 .center-text {
   text-align: center;
 }
-
+/****** the services grid ******/
 div.services {
   display: grid;
   grid-template-columns: 50% 50%;
